modified:   asynchronusoperation.html 	modified:   userdata.html 	modified:   userdata.js

--- a/userdata.html
+++ b/userdata.html
@@ -11,7 +11,8 @@
     <ul id="user-list"></ul>
 
 
-
+<button id="view">View</button>
+<button id="hide">Hide</button>
 
 
     <script src="userdata.js"></script>
